--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,11 +7,15 @@ site_description: "Cross platform G-Code sender with advanced features for GRBL 
 pages:
 - 'Home': 'index.md'
 - 'Download': 'download.md'
-- 'Docs':
-    - "User": 'guide/user.md'
-    - "Developer": 'guide/developer.md'
-    - "Plugin": 'guide/plugin.md'
+- 'User Guide':
+    - "UGS Platform": 'guide/platform.md'
+    - "Setup": 'guide/user.md'
+- 'Developer Guide':
+    - "Getting Started": 'dev/getting_started.md'
+    - "Backend": 'dev/development.md'
+    - "Plugin": 'dev/plugin.md'
 - 'Contributing':
-    - "Code": 'contrib/development.md'
+    - "Code" : 'contrib/code.md'
     - "Translations": 'contrib/translation.md'
     - "Donating": 'contrib/donation.md'
+
