Add google analytics.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ theme: cosmo
 repo_url: https://github.com/winder/Universal-G-Code-Sender
 site_author: Will Winder
 site_description: "Cross platform G-Code sender with advanced features for GRBL based CNC machines."
+google_analytics: ['UA-73554112-1', 'auto']
+
 
 pages:
 - 'Home': 'index.md'
