--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ repo_url: https://github.com/winder/Universal-G-Code-Sender
 site_author: Will Winder
 site_description: "Cross platform G-Code sender with advanced features for GRBL based CNC machines."
 google_analytics: ['UA-73554112-1', 'auto']
-
+extra_css:
+    - css/style.css
 
 pages:
 - 'Home': 'index.md'
